--- a/src/main/resources/templates/menu/menuTemplate.html
+++ b/src/main/resources/templates/menu/menuTemplate.html
@@ -24,6 +24,7 @@
                     <dl class="layui-nav-child">
                         <dd><a href="javascript:;">新增项目</a></dd>
                         <dd><a href="javascript:;">项目管理</a></dd>
+                        <dd><a href="javascript:;">环境配置</a></dd>
                         <dd><a href="javascript:;">git配置</a></dd>
                     </dl>
                 </li>
