--- a/src/main/resources/templates/common/common.html
+++ b/src/main/resources/templates/common/common.html
@@ -5,6 +5,7 @@
     let tree = layui.tree;
     let form = layui.form;
     let laytpl = layui.laytpl;
+    let element = layui.element;
     let context = [[@{/}]];
     layui.extend({
         steps: '{/}'+context+'layui/lay/steps/steps'
