--- a/src/main/resources/templates/common/common.html
+++ b/src/main/resources/templates/common/common.html
@@ -4,6 +4,7 @@
     let $ = layui.$;
     let tree = layui.tree;
     let form = layui.form;
+    let table = layui.table;
     let laytpl = layui.laytpl;
     let element = layui.element;
     let context = [[@{/}]];
