--- a/src/main/resources/templates/menu/switchTemplate.html
+++ b/src/main/resources/templates/menu/switchTemplate.html
@@ -44,7 +44,7 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">域名</label>
                 <div class="layui-input-block">
-                    <input type="text" readonly name="domain" value="{{e.domain}}" required
+                    <input type="text" name="domain" value="{{e.domain}}" required
                            lay-verify="required" autocomplete="off" class="layui-input">
                 </div>
             </div>
