--- a/src/main/resources/templates/steps/steps.html
+++ b/src/main/resources/templates/steps/steps.html
@@ -94,7 +94,7 @@
             debugger
             steps.next(); //下一步
         });
-        saveEnv(function () {
+        addEnv(function () {
             steps.next(); //下一步
             window.location.href=context+"docs";
         })
