--- a/src/main/resources/static/css/global.css
+++ b/src/main/resources/static/css/global.css
@@ -40,6 +40,11 @@
     width: auto;
     padding: 5px;
 }
+.component{ margin: 10px }
+.component .layui-input{height: 30px; padding-left: 12px; background-color: #424652; background-color: rgba(255,255,255,.05); border: none 0; color: #fff; color: rgba(255,255,255,.5); font-size: 12px;}
+.component .layui-form-select .layui-edge{display: none; border-top-color: #999;}
+.component .layui-form-select dl{top: 36px; background-color: rgba(255,255,255,.9)}
+.layui-nav .layui-nav-item1{position:relative;display:inline-block;*display:inline;*zoom:1;vertical-align:middle;line-height:60px}
 
 .version {
     margin: 0;
@@ -248,7 +253,7 @@
 }
 
 .json-text {
-    width: 200px;
+    width: 70%;
     height: 150px;
     font-size: 13px;
     min-height: 100px;
@@ -262,4 +267,5 @@
     font-weight: inherit;
     padding: 6px 10px;
     background-color: #fff;
+
 }
