--- a/src/main/resources/templates/menu/menuTemplate.html
+++ b/src/main/resources/templates/menu/menuTemplate.html
@@ -25,7 +25,7 @@
                 <a href="javascript:openSwitch();">切换<!--弹框修改项目分支环境--></a>
             </li>
             <li class="layui-nav-item">
-                <a href="javascript:window.open(context+'manage','3');">更新</a>
+                <a href="javascript:updateApi()">更新</a>
             </li>
             <li class="layui-nav-item">
                 <a href="javascript:window.open(context+'manage','3');">设置</a>
